--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,10 @@
               "browserTarget": "frontend-template:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "disableHostCheck": true
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c4ac3ffa-e23d-4fc8-8f15-dc5f45f6d0c1"
   }
 }
