--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exam-frontend",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
