--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-virtual": "^3.13.18",
     "axios": "^1.13.3",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
