--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://exam-backend:12058/api;
+        proxy_pass http://app-backend:12058/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
